[tool.poetry]
name = "pycaret-fugue-dask-test"
version = "0.1.0"
description = ""
authors = ["James Bristow <jbris@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
kaleido = "0.2.1"
pycaret = {extras = ["analyze", "parallel"], version = "^3.3.0"}
fugue = "<0.8.7"
dask = {extras = ["dataframe"], version = "^2024.2.1"}
evidently = "^0.4.16"
distributed = "^2024.2.1"
triad = "<0.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
